fixed positioning on mobile menu IMG

--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -204,12 +204,15 @@ section#welcome {
       div.close {
         display: flex;
         justify-content: flex-end;
+        top: 0;
+        left: 0;
+        z-index: 1000;
         margin: .2em;
         font-size: 2em;
         cursor: pointer;
       }
       div.logo {
-        // margin-top: 1em;
+        margin-top: -1em;
         img {
           width: 5em;
         }
